# AIPoseManager

./: .gitignore  PLAN_mcp_server.md  PLAN_plugin.md  README.md  TESTING.md
StudioPoseBridge/: README.md  build.ps1
StudioPoseBridge/src/StudioPoseBridge/: PoseBridgeRuntime.cs  StudioPoseBridge.csproj  StudioPoseBridgePlugin.cs
StudioPoseBridge/src/StudioPoseBridge/Config/: PluginConfig.cs
StudioPoseBridge/src/StudioPoseBridge/Endpoints/: PoseEndpoints.cs
StudioPoseBridge/src/StudioPoseBridge/Http/: ApiModels.cs  AuthMiddleware.cs  HttpServer.cs  JsonHelper.cs  MiniJson.cs  Router.cs
StudioPoseBridge/src/StudioPoseBridge/Properties/: AssemblyInfo.cs
StudioPoseBridge/src/StudioPoseBridge/Studio/: BoneAccess.cs  BoneRegions.cs  CharacterRegistry.cs  CheckpointStore.cs  PoseSerializer.cs  (+2 more)
studio-pose-mcp/: .env.example  README.md  pack-mcpb.bat  pack-mcpb.ps1  pyproject.toml
studio-pose-mcp/claude-desktop/: .mcpbignore  manifest.json
studio-pose-mcp/src/studio_pose_mcp/: __init__.py  __main__.py  cache.py  checkpoints.py  config.py  errors.py  formatting.py  plugin_client.py  regions.py  server.py
studio-pose-mcp/src/studio_pose_mcp/scripts/: __init__.py  smoke.py
studio-pose-mcp/tests/: test_cache.py  test_checkpoints.py  test_formatting.py
tools/: scan_assembly.ps1  scan_bonegroup.ps1  scan_dic.ps1  scan_enum_bonegroup.ps1  scan_fkctrl.ps1  scan_ikinfo.ps1  scan_oci_char.ps1  scan_oci_public.ps1  scan_ocichar_props.ps1  scan_oiboneinfo.ps1  scan_sceneinfo.ps1  scan_studio_base.ps1  scan_studio_singleton.ps1  scan_studio_types.ps1  scan_tree.ps1
(+1 files in other folders)
