[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "studio-pose-mcp"
version = "0.1.0"
description = "MCP server bridging LLMs to StudioNeoV2 Studio Pose Bridge plugin (Suit-Ji)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Suit-Ji" }]
dependencies = [
  "mcp>=1.2.0",
  "httpx>=0.27.0",
  "pydantic-settings>=2.0.0",
  "structlog>=24.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0.0"]

[project.scripts]
studio-pose-mcp = "studio_pose_mcp.__main__:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
